wxc/include/ewxw/wxc_glue.h


void       wxMenu_AppendItem( TSelf(wxMenu) _obj, TClass(wxMenuItem) _itm );

void       wxMenu_AppendSeparator( TSelf(wxMenu) _obj );

void       wxMenu_AppendSub( TSelf(wxMenu) _obj, int id, TString text, TClass(wxMenu) submenu, TString help );

void       wxMenu_Break( TSelf(wxMenu) _obj );

void       wxMenu_Check( TSelf(wxMenu) _obj, int id, TBool check );

TClass(wxMenu) wxMenu_Create( TString title, long style );

void       wxMenu_DeleteById( TSelf(wxMenu) _obj, int id );

void       wxMenu_DeleteByItem( TSelf(wxMenu) _obj, TClass(wxMenuItem) _itm );

void       wxMenu_DeletePointer( TSelf(wxMenu) _obj );

void       wxMenu_DestroyById( TSelf(wxMenu) _obj, int id );

void       wxMenu_DestroyByItem( TSelf(wxMenu) _obj, TClass(wxMenuItem) _itm );

void       wxMenu_Enable( TSelf(wxMenu) _obj, int id, TBool enable );

TClass(wxMenuItem)  wxMenu_FindItem( TSelf(wxMenu) _obj, int id, TClass(wxMenu)* menu );

int        wxMenu_FindItemByLabel( TSelf(wxMenu) _obj, TString itemString );

TStringLen wxMenu_GetHelpString( TSelf(wxMenu) _obj, int id, TStringOutVoid _buf );

TClass(wxWindow) wxMenu_GetInvokingWindow( TSelf(wxMenu) _obj );

TStringLen wxMenu_GetLabel( TSelf(wxMenu) _obj, int id, TStringOutVoid _buf );

size_t     wxMenu_GetMenuItemCount( TSelf(wxMenu) _obj );

int        wxMenu_GetMenuItems( TSelf(wxMenu) _obj, TClass(wxList) _lst );

TClass(wxMenu) wxMenu_GetParent( TSelf(wxMenu) _obj );

int        wxMenu_GetStyle( TSelf(wxMenu) _obj );

TStringLen wxMenu_GetTitle( TSelf(wxMenu) _obj, TStringOutVoid _buf );

void       wxMenu_Insert( TSelf(wxMenu) _obj, size_t pos, int id, TString text, TString help, TBool isCheckable );

void       wxMenu_InsertItem( TSelf(wxMenu) _obj, size_t pos, TClass(wxMenuItem) _itm );

void       wxMenu_InsertSub( TSelf(wxMenu) _obj, size_t pos, int id, TString text, TClass(wxMenu) submenu, TString help );

TBool      wxMenu_IsAttached( TSelf(wxMenu) _obj );

TBool      wxMenu_IsChecked( TSelf(wxMenu) _obj, int id );

TBool      wxMenu_IsEnabled( TSelf(wxMenu) _obj, int id );

void       wxMenu_Prepend( TSelf(wxMenu) _obj, int id, TString text, TString help, TBool isCheckable );

void       wxMenu_PrependItem( TSelf(wxMenu) _obj, TClass(wxMenuItem) _itm );

void       wxMenu_PrependSub( TSelf(wxMenu) _obj, int id, TString text, TClass(wxMenu) submenu, TString help );

void       wxMenu_RemoveById( TSelf(wxMenu) _obj, int id, TClass(wxMenuItem) _itm );

void       wxMenu_RemoveByItem( TSelf(wxMenu) _obj, void* item );

void       wxMenu_SetEventHandler( TSelf(wxMenu) _obj, TClass(wxEvtHandler) handler );

void       wxMenu_SetHelpString( TSelf(wxMenu) _obj, int id, TString helpString );

void       wxMenu_SetInvokingWindow( TSelf(wxMenu) _obj, TClass(wxWindow) win );

void       wxMenu_SetLabel( TSelf(wxMenu) _obj, int id, TString label );

void       wxMenu_SetParent( TSelf(wxMenu) _obj, TClass(wxWindow) parent );

void       wxMenu_SetTitle( TSelf(wxMenu) _obj, TString title );

void       wxMenu_UpdateUI( TSelf(wxMenu) _obj, void* source );